Set the opener correctly when not supporting multiple windows

BUG=770518
R=torne@chromium.org

Change-Id: I01b728704f525e06938865729dd4395f982908da
Reviewed-on: https://chromium-review.googlesource.com/735140
Reviewed-by: Richard Coles <torne@chromium.org>
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511160}
Former-commit-id: d03b3d0f6d78eca4ed174e9c496948b4e3068867